2001-08-13  Arturo Espinosa Aldama  <arturo@ximian.com>

	* file.pl.in (xst_file_close): New abstraction for close.
	I got some errors for doing close undef (although perl -d has
	no trouble with that expression), so we're using this now, for
	simplicity.
	* *.in: changed all calls to close $var to &xst_file_close ($var).

2001-08-13  Tambet Ingo  <tambet@ximian.com>

	* configure.in: Fixed capitalization.

2001-08-09  Arturo Espinosa Aldama  <arturo@ximian.com>

	* ishare.pl.in (xst_ishare_fwrules_get_ipchains): Small
	correction to "configured" ipchains tag.

	* xml.pl.in (xst_xml_print_array): Use xst_xml_print_structure.
	(xst_xml_print_hash): same.
	(xst_xml_print_structure): Call the corresponding function
	depending on the reference type of $s. If just a scalar, print
	<$tag>$s</$tag>.

	* internetsharing-conf.in (xml_parse_fwrules): "overwrite"
	tag support for ipchains too.

	* ishare.pl.in (xst_ishare_dhcp_isc_save): Oops. The
	required argument is the hwaddr, only.
	(xst_ishare_dhcp_isc_set): Activate the dhcpd service:
	not ipchains (here).
	(xst_ishare_fwrules_set_ipchains): "overwrite" tag
	support for ipchains too.

	* service.pl.in (xst_service_sysv_get_status): little
	typo here.

	* ishare.pl.in (xst_ishare_fwrules_get_ipchains): The
	proc file for ipchains is in /proc/net, not /proc/sys/net.
	(xst_ishare_ipchains_save): typo. What was I thinking of?

2001-08-09  Christian Rose  <menthos@menthos.com>

	* report.pl.in: Fixed a typo.

2001-08-07  Arturo Espinosa Aldama  <arturo@ximian.com>

	* internetsharing-conf.in (xml_parse_dhcp): Support
	for "overwrite" tag.

	* ishare.pl.in (xst_ishare_dhcp_isc_save): Overwrite
	dhcp.conf with our own configuration, generated from
	the given XML.
	(xst_ishare_dhcp_conf_add_interface): Adds a subnet
	section to a buffer with the contents of the new
	dhcp.conf.
	(xst_ishare_dhcp_isc_set): Sets up dhcp configuration
	and activates if required.

	* file.pl.in (xst_file_run_backtick): New function